tries to correct display on mobile - test 1

--- a/holberton/styles.css
+++ b/holberton/styles.css
@@ -16,6 +16,7 @@
     margin: 0;
   }
   
+  /* header  */
   header {
     width: 100%;
     height: 120px;
@@ -70,17 +71,16 @@
   /* ----------- main content ----------- */
   main {
     padding-top: 120px;
+    width: 100%;
+  }
+  article{
+    width: 100%;
   }
   
   section {
     width: max(60%, 500px);
     margin: 0 auto;
     padding: 50px 0;
-  }
-  @media (max-width){
-    section{
-        width: 100%;
-    }
   }
 
   h1 {
